After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 746038 - dashdemux: fetch wrong segment at the end of Period
dashdemux: fetch wrong segment at the end of Period
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
1.4.5
Other Linux
: Normal minor
: 1.4.6
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-03-11 14:58 UTC by xixi
Modified: 2015-03-15 12:23 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
a candidate patch (877 bytes, patch)
2015-03-11 15:08 UTC, xixi
committed Details | Review

Description xixi 2015-03-11 14:58:40 UTC
For MPD file like this:
<Period duration="PT5M0S" start="PT0.00S">
   ...
        <SegmentTemplate startNumber="0" duration="3000" timescale="1000" ... />
   ...
 
   
Currently(1.4.5), segemnt-100 will be fetched, but it's not specification complied.
 
According to specification, segemnt-[0-99] are valid segments. 
Yet for segemnt-100, it's out of range and invalid, and it should not be requested by dashdemux.
Comment 1 xixi 2015-03-11 15:08:11 UTC
Created attachment 299105 [details] [review]
a candidate patch

a candidate patch is attached.

Under this scenario, gst_mpdparser_get_chunk_by_index will return false to indicate EOS, rather than continue to download a out-of-range invalid segment
Comment 2 Thiago Sousa Santos 2015-03-15 12:23:15 UTC
commit 5a1ed14c3c56e24d1dbe716b41dc089d9cf19ea7
Author: xixi <xixi10111011@gmail.com>
Date:   Wed Mar 11 23:03:24 2015 +0800

    dashdemux: fetch wrong segment at the end of Period
    
    Fix check for end of Period time to avoid trying
    to fetch a segment that doesn't exist
    
    https://bugzilla.gnome.org/show_bug.cgi?id=746038

Merged to 1.4
commit 18da30a929401e5c7478297445b50907b2940b54
Author: xixi <xixi10111011@gmail.com>
Date:   Wed Mar 11 23:03:24 2015 +0800

    dashdemux: fetch wrong segment at the end of Period
    
    Fix check for end of Period time to avoid trying
    to fetch a segment that doesn't exist
    
    https://bugzilla.gnome.org/show_bug.cgi?id=746038